--- a/style/style.css
+++ b/style/style.css
@@ -14,3 +14,10 @@ h3 {
 .mainimg {
     vertical-align: bottom;
 }
+
+/* .fade-enter-active, .fade-leave-active {
+    transition: opacity .5s
+  }
+  .fade-enter, .fade-leave-to  {
+    opacity: 0
+  } */
